--- a/src/app/pokemons/pages/search-page/search-page.component.html
+++ b/src/app/pokemons/pages/search-page/search-page.component.html
@@ -1,1 +1,34 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+  <h3>Buscador</h3>
+  <mat-form-field>
+    <mat-label>Buscador de Pokémon</mat-label>
+    <input type="text" matInput [formControl]="searchInput" (input)="searchPokemon()" />
+  </mat-form-field>
+
+  <!-- {{searchInput.value }}
+  {{searchInput.status }} -->
+
+  <div class="grid bm-8 pt-2 px-5" *ngIf="searchInput.value!=null">
+    <div class="flex" *ngFor="let item of pokemons?.results">
+      <div class="col" *ngIf="item.name.includes(searchInput.value)">
+        <mat-card appearance="outlined">
+          <mat-card-header>
+            <mat-card-title *ngIf="pokemons" [ngStyle]="{
+                'margin':'auto',
+                'justify-content':'center',
+                'display': 'flex'
+                }">
+              <img src="../../../../assets/pokeball-removebg-preview.png" width="35px">{{item.url | extractIndex}} -
+              {{item.name | titlecase}}</mat-card-title>
+            <!-- <mat-card-subtitle *ngIf="pokemons">{{pokemons.id}}</mat-card-subtitle> -->
+          </mat-card-header>
+          <!-- <img mat-card-image *ngIf="pokemons" src={{pokemons.sprites.front_default}} alt="Ajani"> -->
+          <mat-divider></mat-divider>
+          <mat-card-actions>
+            <button mat-flat-button color="accent" (click)="redirectPokemon(item.name)">view</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
