--- a/src/app/pokemons/pages/list-page/list-page.component.html
+++ b/src/app/pokemons/pages/list-page/list-page.component.html
@@ -2,23 +2,31 @@
 <!-- <li *ngFor="let item of pokemons?.results">
     <a href="/pokemon/{{item.name}}">{{item.name}}</a>
   </li> -->
-<div class="flex col-12">
+<div class="grid bm-8 pt-2 px-5">
   <div class="col-2" *ngFor="let item of pokemons?.results">
     <mat-card appearance="outlined">
       <mat-card-header>
-        <mat-card-title *ngIf="pokemons">{{item.name}}</mat-card-title>
+        <mat-card-title *ngIf="pokemons"
+          [ngStyle]="{
+            'margin':'auto',
+            'justify-content':'center',
+            'display': 'flex'
+            }">
+            <img src="../../../../assets/pokeball-removebg-preview.png" width="35px">{{item.url | extractIndex}} - {{item.name  | titlecase}}</mat-card-title>
         <!-- <mat-card-subtitle *ngIf="pokemons">{{pokemons.id}}</mat-card-subtitle> -->
       </mat-card-header>
       <!-- <img mat-card-image *ngIf="pokemons" src={{pokemons.sprites.front_default}} alt="Ajani"> -->
-      <mat-card-content>
-        <!-- <p>Este es el texto de contenido</p>
-        <ul>
-          <li *ngFor="let item of pokemons?.abilities">{{item.ability.name}}</li>
-        </ul> -->
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button><a href="/pokemon/{{item.name}}">view</a></button>
+      <mat-divider></mat-divider>
+      <mat-card-actions >
+        <button  mat-flat-button color="accent" (click)="redirectPokemon(item.name)">view</button>
       </mat-card-actions>
     </mat-card>
   </div>
+</div>
+<div>
+  <mat-paginator [length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 25, 100]"
+              aria-label="Select page">
+</mat-paginator>
 </div>
