--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;--primary-color: #3928cf; }
 
 
 .spacer{
   flex: 1 1 auto;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.d-center{
+  margin: auto;
+  display: flex;
+  justify-content: center;
 }
