--- a/src/app/pokemons/pages/layout-page/layout-page.component.html
+++ b/src/app/pokemons/pages/layout-page/layout-page.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav mode="push" [ngStyle]="{width:'250px'}">
     <mat-toolbar color="primary">
-      <span class="spacer">Menú</span>
+      <span class="spacer">Menu</span>
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
