--- a/src/app/pokemons/pages/pokemon-page/pokemon-page.component.html
+++ b/src/app/pokemons/pages/pokemon-page/pokemon-page.component.html
@@ -9,7 +9,7 @@
     <mat-card-content>
       <h3><b> Types</b></h3>
       <ul [ngStyle]="{'display':'flex'}">
-        <li class="col-2" *ngFor="let item of pokemons?.types">{{item.type.name}}</li>
+        <li class="col-2" *ngFor="let item of pokemons?.types" [ngStyle]="{'margin':'auto'}">{{item.type.name}}</li>
       </ul>
       <h3><b>Stats</b></h3>
       <ul>
