--- a/src/app/pokemons/pages/search-page/search-page.component.html
+++ b/src/app/pokemons/pages/search-page/search-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-column p-2">
-  <h3>Buscador</h3>
-  <mat-form-field>
-    <mat-label>Buscador de Pokémon</mat-label>
+  <!-- <h3>Catch them all</h3> -->
+  <mat-form-field class="px-5" [ngStyle]="{'margin-right':'3rem'}" >
+    <mat-label>Search Pokémon</mat-label>
     <input type="text" matInput [formControl]="searchInput" (input)="searchPokemon()" />
   </mat-form-field>
 
@@ -10,8 +10,8 @@
 
   <div class="grid bm-8 pt-2 px-5" *ngIf="searchInput.value!=null">
     <div class="flex" *ngFor="let item of pokemons?.results">
-      <div class="col" *ngIf="item.name.includes(searchInput.value)">
-        <mat-card appearance="outlined">
+      <div class="col" *ngIf="item.name.includes(searchInput.value)" [ngStyle]="{'width':'15rem','margin':'auto'}">
+        <mat-card appearance="outlined" >
           <mat-card-header>
             <mat-card-title *ngIf="pokemons" [ngStyle]="{
                 'margin':'auto',
@@ -25,7 +25,7 @@
           <!-- <img mat-card-image *ngIf="pokemons" src={{pokemons.sprites.front_default}} alt="Ajani"> -->
           <mat-divider></mat-divider>
           <mat-card-actions>
-            <button mat-flat-button color="accent" (click)="redirectPokemon(item.name)">view</button>
+            <button mat-flat-button color="accent" (click)="redirectPokemon(item.name)">View</button>
           </mat-card-actions>
         </mat-card>
       </div>
